--- a/app/index.html
+++ b/app/index.html
@@ -1,15 +1,22 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html ng-app="phonecatApp">
 <head>
   <meta charset="utf-8">
-  <title>My HTML File</title>
+  <title>Phonecat</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/angular/angular.js"></script>
+  <script src="js/controllers.js"></script>
 </head>
-<body>
+<body ng-controller="PhoneListCtrl">
 
-  <p>Nothing here {{'yet' + '!'}}</p>
+  <ul>
+    <p>Total number of phones: {{phones.length}}</p>
+    <li ng-repeat="phone in phones">
+      {{phone.name}}
+      <p>{{phone.snippet}}</p>
+    </li>
+  </ul>
 
 </body>
 </html>
