--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@ Sort by:
           <p>{{phone.snippet}}</p>
         </li>
       </ul>
+      
+      <pre>{{phones | json}}</pre>
 
     </div>
   </div>
